--- a/bookland/src/css/product-detail.css
+++ b/bookland/src/css/product-detail.css
@@ -106,6 +106,7 @@
 }
 
 #relatedTitle {
+    margin-left: 0px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
@@ -116,6 +117,7 @@
 }
 
 #relatedTags {
+    margin-left: 0px;
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
@@ -126,10 +128,12 @@
 }
 
 .related-price {
+    
     display: flex;
 }
 
 #relatedPrice {
+    margin-left: 0px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
