--- a/bookland/src/css/banner.css
+++ b/bookland/src/css/banner.css
@@ -133,3 +133,19 @@ body {
     left:0%;
     top: 50%;
 }
+
+@media screen and (max-width: 768px) {
+    .sliceCenter{
+        width: 100%;
+        margin: 0 auto;
+    }
+    .slide{
+        transform: scale(0.4);
+        transition: transform 300ms;
+        opacity: 0.5;
+    }
+    .activeSlide{
+        transform: scale(0.8);
+        opacity: 1;
+    }
+}
