--- a/bookland/src/css/bookOnSale.css
+++ b/bookland/src/css/bookOnSale.css
@@ -86,7 +86,7 @@
 
 .sale-right {
     display: flex;
-    margin-right:34px
+    margin-right: 34px
 }
 
 .sale-right p {
@@ -111,4 +111,26 @@
     text-decoration-line: line-through;
     color: #AAAAAA;
     margin-top: -2px;
+}
+
+@media screen and (max-width: 768px) {
+    .bookOnSaleContainer {
+        margin: 10px 25px 0px 25px;
+    }
+
+    .bookOnSale {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 75px;
+
+        color: #131045;
+    }
+    .booksSale img {
+        width: 90%;
+        height: 290px;
+        background: #C4C4C4;
+        border-radius: 6px;
+    }
 }
