--- a/bookland/src/css/choose.css
+++ b/bookland/src/css/choose.css
@@ -7,7 +7,7 @@
 }
 
 .choose1 {
-    width: 25%;
+    width: 20%;
     height: 233px;
     background: #FFFFFF;
     align-items: center;
@@ -51,4 +51,22 @@
     font-size: 14px;
     line-height: 19px;
     margin-left: 20px;
+}
+
+@media screen and (max-width: 768px) {
+    .chooseImage {
+        width: 40px ;
+        height: 40px ;
+    }
+    .quickDeli{
+        font-size: 16px;
+    }
+    .quickDeliInfo{
+        width: fit-content;
+        font-size: 10px;
+        text-align: center;
+    }
+    .choose{
+        justify-content: space-around;
+    }
 }
