--- a/bookland/src/css/footer.css
+++ b/bookland/src/css/footer.css
@@ -17,13 +17,9 @@
     grid-template-columns: auto auto auto auto auto auto;
 }
 
-.footer1Group {
-    width: 203px;
-    height: 200px;
-}
+
 
 .footer1Item {
-    height: 24px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
@@ -94,7 +90,9 @@
     color: #EAA451;
     margin-top: 5px;
 }
-
+#footerMail{
+    margin: 0px;
+}
 .footer2Content span {
     margin-left: 5px;
     font-family: 'Poppins';
@@ -113,15 +111,16 @@
     border-radius: 14px;
     margin-left: 100px;
     margin-top: 50px;
+    margin-right: 95px;
 }
 
 .footer3 {
-    margin: 56px 0px 0px 95px;
+    margin: 56px 95px 0px 95px;
     display: flex;
     justify-content: space-between;
 }
 
-.footer3left {
+.footer3Left {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
@@ -130,9 +129,6 @@
     color: #363848;
 }
 
-.footer3Right {
-    margin-right: 60px;
-}
 
 #heart {
     color: red;
@@ -147,4 +143,57 @@
 
     text-align: right;
     color: #363848;
+}
+
+@media screen and (max-width: 768px) {
+    .footer1{
+        margin: 56px 0px 0px 0px;
+    }
+    .footer1Item{
+        font-size: 12px;
+        margin: 5px;
+    }
+    .footer2{
+        width: 100%;
+        margin: 20px 5px;
+        display: block;
+    }
+    .footer2Left{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .footer2Left p{
+        display: none;
+    }
+    .footer2Right{
+        margin: 20px 0px 20px 5px;
+        width: 100%;
+    }
+    .footer2RightBody{
+        justify-content: space-between;
+    }
+    .footer2RightBody1 {
+        margin-top: 20px;
+    }
+    .footer3{
+        margin: 5px;
+        justify-content: space-between;
+        width: 100%;
+    }
+    .footer3Right {
+        margin-right: 0px;
+    }
+    .footer2RightBody2 img {
+        width: 398px;
+        height: 158px;
+        background: #C4C4C4;
+        border-radius: 14px;
+        margin-left: 100px;
+        margin-top: 50px;
+    }
+    .footer2RightBody {
+        width: 50%;
+    }
+   
 }
