--- a/bookland/src/css/productMain.css
+++ b/bookland/src/css/productMain.css
@@ -341,3 +341,362 @@
     font-size: 18px;
     line-height: 27px;
 }
+
+
+
+
+@media screen and (max-width: 768px) {
+    .productMain {
+        margin: 50px 20px;
+        display: block;
+        height: fit-content;
+    }
+    
+    .productMain img {
+        width: 200px;
+        height: 280px;
+        background: #C4C4C4;
+        border-radius: 6px;
+        margin-left: 50%;
+        transform: translate(-50%);
+    }
+    
+    .productMainInfo {
+        width: 100%;
+    }
+    
+    .productMainInfo p {
+        margin-top: 20px;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 50px;
+        line-height: 30px;
+        color: #000000;
+        
+    }
+    
+    .subInfo {
+        margin-top: 35px;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .subLeft {
+        display: flex;
+    
+    }
+    
+    .subLeft i {
+        color: #FF754C;
+    }
+    
+    #star5 {
+        color: #E1E1E1;
+    }
+    
+    .subLeft p {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 36px;
+        text-align: right;
+        color: #11142D;
+        margin-top: -10px;
+        margin-left: 15px;
+    }
+    
+    .subRight {
+        display: flex;
+        justify-content: space-between;
+        width: 45%;
+    
+    }
+    
+    .subRight1 {
+        display: flex;
+    }
+    
+    .totalReview {
+        display: flex;
+    }
+    
+    .totalReview i {
+        color: #FF754C;
+    }
+    
+    .totalReview p {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        text-align: right;
+        color: #131045;
+        margin: -2px 20px 0px 10px;
+    }
+    
+    .totalLike {
+        display: flex;
+    }
+    
+    .totalLike i {
+        color: #FF754C;
+    }
+    
+    .totalLike p {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        text-align: right;
+        color: #131045;
+        margin: 0px 10px;
+    }
+    .subRight2{
+        display: flex;
+    }
+    
+    .subRight2 i {
+        font-size: xx-large;
+        margin-top: -5px;
+        margin-right: 5px;
+    }
+    
+    #fb {
+        display: none;
+    }
+    
+    #tw {
+        display: none;
+    }
+    
+    #line {
+        display: none;
+    }
+    
+    
+    .productStt {
+        display: flex;
+        margin-top: 33px;
+        width: 100%;
+        justify-content: space-between;
+        margin-left: -200px;
+    
+    }
+    
+    .productSttLeft {
+        display: flex;
+    }
+    
+    .productSttLeft img {
+        width: 50px;
+        height: 50px;
+        background: #C4C4C4;
+        border-radius: 14px;
+    }
+    
+    .productSttLeft p {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 22px;
+        color: #AAAAAA;
+    }
+    
+    .productSttLeft span {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 27px;
+        color: #11142D;
+    }
+    
+    .authorInfo {
+        margin-left: 18px;
+        width: 150px;
+        margin-right: 10px;
+    }
+    
+    .publish {
+        /* margin-left: 30px; */
+        width: 160px;
+    }
+    
+    .publishYear {
+        margin-left: 10px;
+    }
+    
+    .productSttRight {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+    
+    .freeShipping {
+        display: flex;
+        width: 180px;
+        height: 50px;
+        border: 2px solid #AAAAAA;
+        border-radius: 5px;
+        text-align: center;
+        align-items: center;
+        background-color: #FFFFFF;
+        margin-left: 50px;
+    }
+    
+    .freeShipping i {
+        color: #131045;
+        margin-left: 5%;
+    }
+    
+    .freeShipping p {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 25px;
+        color: #131045;
+        margin-left: 5px;
+    }
+    
+    .inStock {
+        display: flex;
+        width: 180px;
+        height: 50px;
+        border: 2px solid #3EB760;
+        border-radius: 5px;
+        text-align: center;
+        align-items: center;
+        background-color: #FFFFFF;
+    }
+    
+    .inStock i {
+        color: #3EB760;
+        margin-left: 17%;
+    }
+    
+    .inStock p {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 25px;
+        color: #3EB760;
+        margin-left: 5px;
+    }
+    
+    .description p {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 26px;
+        color: rgba(0, 0, 0, 0.7);
+        margin-top: 34px;
+        margin-right: 25px;
+    }
+    
+    .addToCartContainer {
+        width: 100%;
+        height: 76px;
+        margin-top: 60px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center !important;
+    }
+    
+    .priceContainer {
+        display: flex;
+        align-items: center;
+    }
+    
+    .real-price {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 30px !important;
+        line-height: 68px;
+        color: #11142D;
+        margin: 0px !important;
+    }
+    
+    .origin-price {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 15px !important;
+        line-height: 24px;
+        margin-top: 7px !important;
+       
+        text-decoration-line: line-through;
+    
+        color: #636363 !important;
+    }
+    
+    .priceContainer button {
+        width: 57px;
+        height: 29px;
+        background: #FF754C;
+        border-radius: 6px;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 24px;
+        color: #FFFFFF;
+        border: 1px solid #FFFFFF;
+        margin: 5px 0px 0px 15px;
+        margin-bottom: 7px;
+    }
+    
+    .atcBtnContainer {
+        width: 60%;
+        height: 60px;
+        display: flex;
+        justify-content: space-between;
+        margin-right: 25px;
+    }
+    .quantity-container {
+        display: flex;
+        width: 120px;
+        height: 50px;
+        justify-content: space-around;
+        border: 2px solid #F0EEFF;
+        border-radius: 6px;
+        align-items: center;
+    }
+    
+    .quantity-container p {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 22px;
+        margin: 0px;
+    
+        color: #000000;
+    }
+    
+    .quantity-container i {
+        color: #EAA451;
+    }
+    
+    .atcBtnContainer button {
+        width: 150px;
+        height: 50px;
+        background: #EAA451;
+        box-shadow: 0px 25px 33px rgba(234, 164, 81, 0.12);
+        border-radius: 6px;
+        border: 2px solid #FFFFFF;
+        color: #FFFFFF;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 27px;
+    }
+}
